--- a/privacy_eye/manifest.json
+++ b/privacy_eye/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Privacy Eye",
-  "version": "1.0.4",
-  "description": "Get back the control on your data.",
+  "name": "tattletale",
+  "version": "1.0.5",
+  "description": "Reveal the invisible trackers hidden across the web.",
   "permissions": [
     "<all_urls>",
     "activeTab",
@@ -33,10 +33,10 @@
     "default_title": "",
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/owl-16.png",
-      "32": "images/owl-32.png",
-      "48": "images/owl-48.png",
-      "128": "images/owl-128.png"
+      "16": "images/eye.png",
+      "32": "images/eye.png",
+      "48": "images/eye.png",
+      "128": "images/eye.png"
     }
   },
   "icons": {
