--- a/privacy_eye/package.json
+++ b/privacy_eye/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "privacy_eye",
-  "version": "1.0.4",
-  "description": "",
+  "name": "tattletale",
+  "version": "1.0.5",
+  "description": "Reveal the invisible trackers hidden across the web",
   "main": "contentscript.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
